<?xml version="1.0" encoding="utf-8" ?>
<package format="2">
    <name>orb_slam2_dense</name>

    <version>0.1.0</version>

    <description>ROS package of ORB_SLAM2 dense point cloud version,
        modified from: https://github.com/tiantiandabaojian/ORB-SLAM2_RGBD_DENSE_MAP</description>

    <maintainer email="yhfeng1995@gmail.com">yonghui</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>

    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>tf_conversions</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>
    <build_export_depend>pcl_conversions</build_export_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
</package>